Implementar rascunho de compartilhamento de códigos
- Talvez essa não seja a melhor alternativa
- Temos que analisar se haverá abuso, etc

--- a/views/editor/tab.twig
+++ b/views/editor/tab.twig
@@ -23,6 +23,10 @@
             <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/open.png">
         </button>
 
+        <button title="Gera um link do programa atual para ser compartilhado na internet" class="tbb share" id="share-btn">
+            <img src="/assets/editor/share.png">
+        </button>
+
         <hr>
 
         <button title="Abre a ajuda com sintaxe e bibliotecas" class="tbb help" id="help-btn">
