--- a/views/editor/ajuda.twig
+++ b/views/editor/ajuda.twig
@@ -9,7 +9,7 @@
     <link rel="icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.css?63a81582da43cf03fb027cf2a841ee742bfe1c28">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/ax5ui/ax5ui-layout@master/dist/ax5layout.css?63a81582da43cf03fb027cf2a841ee742bfe1c28">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default-dark/style.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/res.css">
@@ -35,8 +35,8 @@
     <script type="text/javascript"> var d = { baseUrl: window.location.pathname + "/../", res: "ajuda" }; </script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5core/master/dist/ax5core.min.js?72f2e6bd922a88ab130fe72264615a2acd0de5d8"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.min.js?63a81582da43cf03fb027cf2a841ee742bfe1c28"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/ax5ui/ax5core@master/dist/ax5core.min.js?72f2e6bd922a88ab130fe72264615a2acd0de5d8"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/ax5ui/ax5ui-layout@master/dist/ax5layout.min.js?63a81582da43cf03fb027cf2a841ee742bfe1c28"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/jstree.min.js"></script>
     <script type="text/javascript" src="/assets/editor/mode-portugol.js"></script>
     <script type="text/javascript" src="/assets/editor/portugol.js"></script>
