--- a/views/editor/meta.twig
+++ b/views/editor/meta.twig
@@ -9,7 +9,7 @@
     <link rel="icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.css?63a81582da43cf03fb027cf2a841ee742bfe1c28">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/ax5ui/ax5ui-layout@master/dist/ax5layout.css?63a81582da43cf03fb027cf2a841ee742bfe1c28">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default-dark/style.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/res.css">
