--- a/views/editor/scripts.twig
+++ b/views/editor/scripts.twig
@@ -2,12 +2,12 @@
     <script type="text/javascript"> window.TextEncoder = window.TextDecoder = null; </script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5core/master/dist/ax5core.min.js?72f2e6bd922a88ab130fe72264615a2acd0de5d8"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.min.js?63a81582da43cf03fb027cf2a841ee742bfe1c28"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/ax5ui/ax5core@master/dist/ax5core.min.js?72f2e6bd922a88ab130fe72264615a2acd0de5d8"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/ax5ui/ax5ui-layout@master/dist/ax5layout.min.js?63a81582da43cf03fb027cf2a841ee742bfe1c28"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/blob-polyfill/3.0.20180112/Blob.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/inexorabletash/text-encoding/master/lib/encoding-indexes.js?4d1b54560d7bc90addcbe85edb91ed8e99f72d31"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/inexorabletash/text-encoding/master/lib/encoding.js?4d1b54560d7bc90addcbe85edb91ed8e99f72d31"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/inexorabletash/text-encoding@master/lib/encoding-indexes.js?4d1b54560d7bc90addcbe85edb91ed8e99f72d31"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/inexorabletash/text-encoding@master/lib/encoding.js?4d1b54560d7bc90addcbe85edb91ed8e99f72d31"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/jstree.min.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript">var d={baseUrl:((window.location.pathname.length<2)?"/":window.location.pathname+"/"),exemplo:{nome:false,codigo:false},tabs:[]};</script>
