Utilizar o jsDelivr para referenciar dependências E atualizar a maioria delas (aparentemente só não deu o Ace)

--- a/views/editor/ide.twig
+++ b/views/editor/ide.twig
@@ -33,7 +33,7 @@
                             </button>
 
                             <a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank">
-                                <img src="https://git-scm.com/images/logos/downloads/Git-Icon-White.png" style="max-height:64px" class="img-responsive">
+                                <img src="/assets/editor/git-white.png" style="max-height:64px" class="img-responsive">
                                 <span>Código-fonte</span>
                             </a>
                         </div>
