--- a/views/index.twig
+++ b/views/index.twig
@@ -19,8 +19,8 @@
     <link rel="icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha256-bZLfwXAP04zRMK2BjiO8iu9pf4FbLqX6zitd+tIvLhE=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/landing.css">
 
     <script>
@@ -51,15 +51,9 @@
 
                     <div class="row">
                         <center>
-                            <div class="col-md-3 col-md-offset-3 col-xs-12">
-                                <a class="btn btn-prepend external" href="/ide" class="mt-5">
-                                    <i class="prepended portugol-icon"></i>Começar a editar
-                                </a>
-                            </div>
-
-                            <div class="col-md-3 col-xs-12">
-                                <a class="btn btn-flat external" href="http://bit.ly/2vwEcBc" target="_blank">Baixe o Portugol Studio</a>
-                            </div>
+                            <a class="btn btn-prepend external" href="/ide" class="mt-5">
+                                <i class="prepended portugol-icon"></i>Começar a editar
+                            </a>
                         </center>
                     </div>
                 </div>
@@ -118,12 +112,11 @@
 
     <div class="footer text-center">
         <p class="fmenu">
-            <a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank" rel="external">GITHUB</a> | <a href="https://github.com/dgadelha/Portugol-Webstudio/blob/master/LICENSE" target="_blank" rel="external">LICENÇA</a><br>
-            <center>Hospedado por <a class="no-decoration" href="https://zeit.co/" target="_blank" rel="external">▲ ZEIT Now</a></center>
+            <a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank" rel="external">GITHUB</a> | <a href="https://github.com/dgadelha/Portugol-Webstudio/blob/master/LICENSE" target="_blank" rel="external">LICENÇA</a>
         </p>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="/assets/landing.js"></script>
 </body>
 </html>
