--- a/views/editor/ajuda.twig
+++ b/views/editor/ajuda.twig
@@ -9,8 +9,8 @@
     <link rel="icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/ax5ui/ax5ui-layout@master/dist/ax5layout.css?63a81582da43cf03fb027cf2a841ee742bfe1c28">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default-dark/style.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ax5ui-layout@1.4.126/dist/ax5layout.css" integrity="sha256-QRw3D/1gkEfevaGf2/ELaIfuko9MqVQqAN3gqORuiYc=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jstree@3.3.7/dist/themes/default-dark/style.min.css" integrity="sha256-2hTiI2p4bt1TnBnDtbTJ+UMNBVdzmtd5Td8+65lR1t0=" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/assets/editor/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/res.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/portugol.css">
@@ -33,11 +33,11 @@
 
     <script type="text/javascript"> window.TextEncoder = window.TextDecoder = null; </script>
     <script type="text/javascript"> var d = { baseUrl: window.location.pathname + "/../", res: "ajuda" }; </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/ax5ui/ax5core@master/dist/ax5core.min.js?72f2e6bd922a88ab130fe72264615a2acd0de5d8"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/ax5ui/ax5ui-layout@master/dist/ax5layout.min.js?63a81582da43cf03fb027cf2a841ee742bfe1c28"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/jstree.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.2.9/src-min/ace.js" integrity="sha256-U//RSeH3TR3773Rk+1lAufJnRjEaG5LcdbvGV72kHEM=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ax5core@1.4.126/dist/ax5core.min.js" integrity="sha256-tDNeD6BLE+000MFqAWAr8fCAkLSoDx5tfEXlsIWs1Pk=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ax5ui-layout@1.4.126/dist/ax5layout.min.js" integrity="sha256-qE7zhoPWS5gzEc10S5h0BCWLYflsYjL6oqCflBYMQ5A=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jstree@3.3.7/dist/jstree.min.js" integrity="sha256-So1t0NS1GeCJlhjvbf3o+JHWA+60Rkrj9Qu0waUEMoU=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/assets/editor/mode-portugol.js"></script>
     <script type="text/javascript" src="/assets/editor/portugol.js"></script>
     <script type="text/javascript" src="/assets/editor/res-ajuda.js"></script>
