--- a/views/editor/meta.twig
+++ b/views/editor/meta.twig
@@ -9,8 +9,8 @@
     <link rel="icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/ax5ui/ax5ui-layout@master/dist/ax5layout.css?63a81582da43cf03fb027cf2a841ee742bfe1c28">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default-dark/style.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ax5ui-layout@1.4.126/dist/ax5layout.css" integrity="sha256-QRw3D/1gkEfevaGf2/ELaIfuko9MqVQqAN3gqORuiYc=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jstree@3.3.7/dist/themes/default-dark/style.min.css" integrity="sha256-2hTiI2p4bt1TnBnDtbTJ+UMNBVdzmtd5Td8+65lR1t0=" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/assets/editor/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/res.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/portugol.css">
