--- a/views/editor/scripts.twig
+++ b/views/editor/scripts.twig
@@ -1,14 +1,14 @@
 
     <script type="text/javascript"> window.TextEncoder = window.TextDecoder = null; </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/ax5ui/ax5core@master/dist/ax5core.min.js?72f2e6bd922a88ab130fe72264615a2acd0de5d8"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/ax5ui/ax5ui-layout@master/dist/ax5layout.min.js?63a81582da43cf03fb027cf2a841ee742bfe1c28"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/blob-polyfill/3.0.20180112/Blob.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/inexorabletash/text-encoding@master/lib/encoding-indexes.js?4d1b54560d7bc90addcbe85edb91ed8e99f72d31"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/inexorabletash/text-encoding@master/lib/encoding.js?4d1b54560d7bc90addcbe85edb91ed8e99f72d31"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/jstree.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.2.9/src-min/ace.js" integrity="sha256-U//RSeH3TR3773Rk+1lAufJnRjEaG5LcdbvGV72kHEM=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ax5core@1.4.126/dist/ax5core.min.js" integrity="sha256-tDNeD6BLE+000MFqAWAr8fCAkLSoDx5tfEXlsIWs1Pk=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ax5ui-layout@1.4.126/dist/ax5layout.min.js" integrity="sha256-qE7zhoPWS5gzEc10S5h0BCWLYflsYjL6oqCflBYMQ5A=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/blob-polyfill@3.0.20180112/Blob.js" integrity="sha256-Sma1QPTC1m7NEZBwwAYn6OdljXuOC6LfBaGoBwrPerg=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.1/dist/FileSaver.min.js" integrity="sha256-Sf4Tr1mzejErqH+d3jzEfBiRJAVygvjfwUbgYn92yOU=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/text-encoding@0.7.0/lib/encoding-indexes.js" integrity="sha256-0P1P7TKtsEVwY070xQ4v2Ss8fyQLaORAPbHPXfYJZj8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/text-encoding@0.7.0/lib/encoding.js" integrity="sha256-E9b12NeEmrVSXHs978RmbR1TsqL7+Xd+tHA5lWzi0Mc=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jstree@3.3.7/dist/jstree.min.js" integrity="sha256-So1t0NS1GeCJlhjvbf3o+JHWA+60Rkrj9Qu0waUEMoU=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript">var d={baseUrl:((window.location.pathname.length<2)?"/":window.location.pathname+"/"),exemplo:{nome:false,codigo:false},tabs:[]};</script>
     <script type="text/javascript" src="/assets/editor/mode-portugol.js"></script>
