--- a/views/editor/ide.twig
+++ b/views/editor/ide.twig
@@ -36,6 +36,11 @@
                                 <img src="/assets/editor/git-white.png" style="max-height:64px" class="img-responsive">
                                 <span>Código-fonte</span>
                             </a>
+
+                            <a href="https://cubos.io/?utm_source=Portugol-Webstudio&utm_medium=ide&utm_campaign=webstudio-hosting" rel="external follow" target="_blank" class="pull-right partner-info">
+                                <span>Patrocinado por</span>
+                                <img src="/assets/cubos-white.png" style="max-height:64px" class="img-responsive" alt="Cubos">
+                            </a>
                         </div>
 
                         <div class="row row-exemplo-desc hidden-xs">
