--- a/views/index.twig
+++ b/views/index.twig
@@ -114,6 +114,11 @@
         <p class="fmenu">
             <a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank" rel="external">GITHUB</a> | <a href="https://github.com/dgadelha/Portugol-Webstudio/blob/master/LICENSE" target="_blank" rel="external">LICENÇA</a>
         </p>
+
+        <a href="https://cubos.io/?utm_source=Portugol-Webstudio&utm_medium=landing&utm_campaign=webstudio-hosting" rel="external follow" target="_blank" class="partner-info">
+            <span>Patrocinado por</span>
+            <img src="/assets/cubos-blue.png" alt="Cubos">
+        </a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
