--- a/views/editor/ide.twig
+++ b/views/editor/ide.twig
@@ -15,7 +15,7 @@
         <div class="tab" id="tab-inicio">
             <div class="tab-content">
                 <div data-ax5layout="ax1" class="ax5layout" data-config="{layout:'dock-panel',splitter:{size:6}}" id="ax1">
-                    <div data-dock-panel="{dock:'center'}" id="exc">
+                    <div data-dock-panel="{dock:'center'}" id="exc" style="position:relative">
                         <div class="row" id="btl">
                             <button class="action-add">
                                 <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/newfile.png" class="img-responsive">
@@ -41,6 +41,10 @@
                                 <span>Patrocinado por</span>
                                 <img src="/assets/cubos-white.png" style="max-height:64px" class="img-responsive" alt="Cubos">
                             </a>
+                        </div>
+
+                        <div id="srv" style="position:absolute;bottom:20%;z-index:9999;width:100%;text-align:center">
+                            <a href="https://bit.ly/3d4XvXV" rel="external nofollow" target="_blank"><img style="max-width:60vh" src="/assets/survey.jpg"></a>
                         </div>
 
                         <div class="row row-exemplo-desc hidden-xs">
