Utilizar Modal para exibir link compartilhado
Closes #38

--- a/src/views/editor/scripts.twig
+++ b/src/views/editor/scripts.twig
@@ -16,6 +16,7 @@
   {% if ide %}
   <script type="text/javascript" src="/assets/editor/ide.js"></script>
   {% elseif tab %}
+  <script type="text/javascript" src="/assets/editor/bootstrap.min.js"></script>
   <script type="text/javascript" src="/assets/editor/editor.js"></script>
   {% endif %}
 </body>
