Utilizar outro serviço de compartilhamento de código

--- a/src/views/editor/tab.twig
+++ b/src/views/editor/tab.twig
@@ -65,6 +65,8 @@
             </span>
           </div>
         </div>
+
+        <p>Por favor se atente que <string>este link expira em 1 semana</string>.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">Fechar</button>
