Adicionar referência a nova versão em desenvolvimento

--- a/src/views/editor/ide.twig
+++ b/src/views/editor/ide.twig
@@ -37,6 +37,10 @@
               <span>Código-fonte</span>
             </a>
 
+            <a href="https://dgadelha.github.io/tcc-webstudio/" onclick="return confirm('LEIA COM ATENÇÃO:\n\nEsta nova versão ainda não está completa.\nExistem recursos da linguagem que ainda não foram implementados e o seu código pode não funcionar da maneira correta.\n\nCaso encontre algum problema, por favor nos avise. O seu feedback é essencial para fazer isso dar certo =D\n\nClique OK para continuar para a nova versão')" target="_blank">
+              <b style="font-size: 15pt">NOVA VERSÃO EXPERIMENTAL<br>DISPONÍVEL PARA TESTES</b>
+            </a>
+
             <a href="https://cubos.io/?utm_source=Portugol-Webstudio&utm_medium=ide&utm_campaign=webstudio-hosting" rel="external follow" target="_blank" class="pull-right partner-info">
               <span>Patrocinado por</span>
               <img src="/assets/cubos-white.png" style="max-height:64px" class="img-responsive" alt="Cubos">
