Atualização do changelog

--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -77,9 +77,9 @@
   <hr />
 
   <h4>📰 Novidades</h4>
+  <p><strong>24/10/2022:</strong> Implementação das operações de <em>Bitwise Shift</em> (<em>Left Shift</em> e <em>Right Shift</em>).</p>
   <p><strong>20/10/2022:</strong> Correção na atribuição de valores às variáveis para garantir as tipagens corretas e correção na exibição de erros em tempo de execução.</p>
   <p><strong>19/10/2022:</strong> Correção ao pressionar <em>backspace</em> e suporte a múltiplos parâmetros na entrada de dados pela função <code>leia</code>.</p>
-  <p><strong>12/10/2022:</strong> Melhorias internas de componentização e organização de código.</p>
 </section>
 
 <footer>
