--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -77,9 +77,9 @@
   <hr />
 
   <h4>📰 Novidades</h4>
+  <p><strong>30/10/2022:</strong> Correção de problema ao utilizar retornos de funções como valores.</p>
   <p><strong>27/10/2022:</strong> Correção na declaração de variáveis do tipo <em>vetor</em> e correção na concatenação de <em>cadeia</em> e <em>caracter</em>.</p>
   <p><strong>25/10/2022:</strong> Correção na inicialização de variáveis no laço <em>para</em>.</p>
-  <p><strong>24/10/2022:</strong> Implementação das operações de <em>Bitwise Shift</em> (<em>Left Shift</em> e <em>Right Shift</em>) e correção nas operações de Bitwise <em>AND</em>, <em>OR</em> e <em>XOR</em>.</p>
 </section>
 
 <footer>
