Correção na verificação de tipos de argumentos de funções

--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -77,9 +77,9 @@
   <hr />
 
   <h4>📰 Novidades</h4>
+  <p><strong>12/11/2022:</strong> Correção na verificação de tipos de argumentos de funções.</p>
   <p><strong>31/10/2022:</strong> Rolagem automática no Console de Saída e implementação dos operadores de atribuição composta (<em>+=</em>, <em>-=</em>, <em>/=</em> e <em>*=</em>).</p>
   <p><strong>30/10/2022:</strong> Correção de problema ao utilizar retornos de funções como valores.</p>
-  <p><strong>27/10/2022:</strong> Correção na declaração de variáveis do tipo <em>vetor</em> e correção na concatenação de <em>cadeia</em> e <em>caracter</em>.</p>
 </section>
 
 <footer>
