--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -77,9 +77,9 @@
   <hr />
 
   <h4>📰 Novidades</h4>
+  <p><strong>10/08/2023:</strong> Atualização de dependências - favor reportar qualquer problema.</p>
   <p><strong>10/12/2022:</strong> Correção no comportamento da concatenação.</p>
   <p><strong>12/11/2022:</strong> Correção na verificação de tipos de argumentos de funções.</p>
-  <p><strong>31/10/2022:</strong> Rolagem automática no Console de Saída e implementação dos operadores de atribuição composta (<em>+=</em>, <em>-=</em>, <em>/=</em> e <em>*=</em>).</p>
 </section>
 
 <footer>
