--- a/packages/ide/src/styles.scss
+++ b/packages/ide/src/styles.scss
@@ -66,11 +66,13 @@ $PortugolWebstudio-theme: mat.define-dark-theme(
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($PortugolWebstudio-theme);
-
 @import "variables";
-// @import "tabs";
-// @import "editor";
-// @import "start";
+
+.mat-mdc-tooltip, .mdc-tooltip__surface {
+  --mdc-plain-tooltip-supporting-text-line-height: normal;
+  --mdc-plain-tooltip-supporting-text-size: 0.75rem;
+  --mdc-plain-tooltip-supporting-text-weight: 400;
+}
 
 * {
   box-sizing: border-box;
@@ -115,7 +117,7 @@ s {
   flex-grow: 1;
 }
 
-.mat-dialog-container {
+.mat-mdc-dialog-container {
   display: flex !important;
 
   > * {
