--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -77,7 +77,14 @@
   <hr />
 
   <h4>📰 Novidades</h4>
-  <p><strong>10/08/2023:</strong> Atualização de dependências - favor reportar qualquer problema.</p>
+  <p>
+    <strong>10/08/2023:</strong> Atualização de dependências. Colorir nome de funções (<a
+      href="https://github.com/dgadelha/Portugol-Webstudio/pull/72"
+      target="_blank"
+      rel="external noopener"
+      >PR #72</a
+    >, contribuído por <a href="https://github.com/6a8i" target="_blank" rel="external noopener">@6a8i</a>).
+  </p>
   <p><strong>10/12/2022:</strong> Correção no comportamento da concatenação.</p>
   <p><strong>12/11/2022:</strong> Correção na verificação de tipos de argumentos de funções.</p>
 </section>
