--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -83,7 +83,8 @@
       target="_blank"
       rel="external noopener"
       >PR #72</a
-    >, contribuído por <a href="https://github.com/6a8i" target="_blank" rel="external noopener">@6a8i</a>).
+    >, contribuído por <a href="https://github.com/6a8i" target="_blank" rel="external noopener">@6a8i</a>). Melhorias
+    na experiência de renomear e fechar abas.
   </p>
   <p><strong>10/12/2022:</strong> Correção no comportamento da concatenação.</p>
   <p><strong>12/11/2022:</strong> Correção na verificação de tipos de argumentos de funções.</p>
