Corrigir aplicação de modificadores

--- a/packages/ide/src/app/tab-editor/tab-editor.component.scss
+++ b/packages/ide/src/app/tab-editor/tab-editor.component.scss
@@ -47,9 +47,11 @@
 
   &:disabled {
     cursor: not-allowed;
+    pointer-events: none;
 
     svg {
       filter: grayscale(1);
+      -webkit-transform: translateZ(0);
     }
   }
 }
