--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -77,6 +77,7 @@
   <hr />
 
   <h4>📰&nbsp;&nbsp;Novidades</h4>
+  <p><strong>02/09/2023:</strong> Verificação básica de erros no editor.</p>
   <p>
     <strong>10/08/2023:</strong>
   </p>
@@ -95,7 +96,6 @@
   </ul>
 
   <p><strong>10/12/2022:</strong> Correção no comportamento da concatenação.</p>
-  <p><strong>12/11/2022:</strong> Correção na verificação de tipos de argumentos de funções.</p>
 </section>
 
 <footer>
