--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -77,6 +77,7 @@
   <hr />
 
   <h4>📰&nbsp;&nbsp;Novidades</h4>
+  <p><strong>28/09/2023:</strong> Correção de uso excessivo de recursos ao usar atribuições.</p>
   <p><strong>02/09/2023:</strong> Verificação básica de erros no editor.</p>
   <p>
     <strong>10/08/2023:</strong>
