--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -66,24 +66,9 @@
   <hr />
 
   <h4>📰&nbsp;&nbsp;Novidades</h4>
+  <p><strong>11/10/2023:</strong> Correção de quebra de linha após execução da função <code>leia()</code></p>
   <p><strong>28/09/2023:</strong> Correção de uso excessivo de recursos ao usar atribuições.</p>
   <p><strong>02/09/2023:</strong> Verificação básica de erros no editor.</p>
-  <p>
-    <strong>10/08/2023:</strong>
-  </p>
-
-  <ul>
-    <li>Atualização de dependências.</li>
-    <li>
-      Colorir nome de funções (<a
-        href="https://github.com/dgadelha/Portugol-Webstudio/pull/72"
-        target="_blank"
-        rel="external noopener"
-        >PR #72</a
-      >, contribuído por <a href="https://github.com/6a8i" target="_blank" rel="external noopener">@6a8i</a>).
-    </li>
-    <li>Melhorias na experiência de renomear e fechar abas. Correção na aplicação de modificadores em variáveis.</li>
-  </ul>
 </section>
 
 <footer>
