Corrigir check de função retornando valor No momento, foi a verificação que deu pra fazer

--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -66,9 +66,9 @@
   <hr />
 
   <h4>📰&nbsp;&nbsp;Novidades</h4>
+  <p><strong>15/10/2023:</strong> Correção de verificação simples de retorno de função</p>
   <p><strong>11/10/2023:</strong> Correção de quebra de linha após execução da função <code>leia()</code></p>
   <p><strong>28/09/2023:</strong> Correção de uso excessivo de recursos ao usar atribuições.</p>
-  <p><strong>02/09/2023:</strong> Verificação básica de erros no editor.</p>
 </section>
 
 <footer>
