Novas logos de eventos do ano

--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -1,4 +1,4 @@
-<img src="assets/logo.svg" width="100%" class="logo" />
+<img [src]="logo" width="100%" class="logo" />
 
 <nav>
   <button mat-ripple (click)="newTab.emit()">
