Correções de acessibilidade e alteração do link de sugestões

--- a/packages/ide/src/app/app.component.html
+++ b/packages/ide/src/app/app.component.html
@@ -16,6 +16,7 @@
       <span class="tab-icon">
         <img
           src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/pequeno/light_pix.png"
+          alt="Ícone do Portugol"
         />
       </span>
       <span class="tab-text">Portugol Webstudio</span>
