--- a/packages/ide/src/app/dialog-open-example/dialog-open-example.component.html
+++ b/packages/ide/src/app/dialog-open-example/dialog-open-example.component.html
@@ -13,7 +13,7 @@
           <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
             <mat-tree-node *matTreeNodeDef="let node">
               <li mat-ripple (click)="loadItem(node)" [class.active]="current?.id === node.id">
-                <button mat-icon-button disabled>
+                <button mat-icon-button disabled title="Expandir/retrair">
                   <mat-icon></mat-icon>
                 </button>
                 <span>{{ node.name }}</span>
