Implementar verificação de erros em >, >=, <, <=
Closes #141

--- a/packages/ide/src/app/tab-start/tab-start.component.html
+++ b/packages/ide/src/app/tab-start/tab-start.component.html
@@ -69,9 +69,9 @@
   <hr />
 
   <h4>📰&nbsp;&nbsp;Novidades</h4>
+  <p><strong>17/01/2024:</strong> Melhorias nas verificações de erros (comparação lógica e bibliotecas)</p>
   <p><strong>26/12/2023:</strong> Melhorias nas verificações de erros (escopos e tipos)</p>
   <p><strong>15/10/2023:</strong> Correção de verificação simples de retorno de função</p>
-  <p><strong>11/10/2023:</strong> Correção de quebra de linha após execução da função <code>leia()</code></p>
 </section>
 
 <footer>
